--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>NETFLIX</title>
 </head>
 <body>
-    <a href="C:\Users\admin\OneDrive\Desktop\classroom aryan\HOME_NETFLIX\Netflix\index.html">HLO CLICK ME</a>
+    <a href="Netflix/index.html">HLO CLICK ME</a>
     
 </body>
 </html>
