--- a/index.html
+++ b/index.html
@@ -3,10 +3,152 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NETFLIX</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="style4.css" rel="stylesheet">
+    <title>Watch India-Watch TV Shows on website</title>
 </head>
 <body>
-    <a href="C:\Users\admin\OneDrive\Desktop\classroom aryan\HOME_NETFLIX\Netflix\index.html">HLO CLICK ME</a>
-    
+    <div class="firstmain">
+        <div class="header">
+            <div class="img">
+                <img style="height:45px; width:150px;" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/08/Netflix_2015_logo.svg/2560px-Netflix_2015_logo.svg.png">
+            </div>
+            <div class="input">
+                <select name="language" id="language">
+                    <option value="English">English </option>
+                    <option value="Hindi">Hindi</option>
+                </select>
+            </div>
+            <div class="btn">
+                <button><b><a style="color:white; text-decoration: none;" href="../Netflix sign in/index.html">Sign in</a></b></button>
+            </div>
+        </div>
+
+        <h1 class="h1"><b>Unlimited movies,TV shows and more</b></h1>
+        <p class="p1">Watch anywhere,Cancel anywhere</p>
+        <h3 class="h3">Ready to watch? Enter your email to create or restart your membership.</h3>
+        <form action="../after-sign-in/1st-step/index.html">
+            <input class="aryan" type="mail" placeholder="  Email address" required>
+            <button class="getstarted" href="../after-sign-in/1st-step/index.html">Get Started ></button>
+        </form>
+    </div>
+<br>
+    <div class="secondmain">
+        <div>
+            <h2 class="h2"><b>Enjoy on your TV</b></h2>
+        <p class="p">Watch on smart TVs, PlayStation, Xbox,<br> ChromeCast, AppleTV, Blu-ray players and<br> more.</p>
+        </div>
+        <div >
+            <img  class="computer" src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/tv.png"> 
+        </div>
+    </div>
+<br>
+
+    <div class="thirdmain">
+        <div>
+            <div class="mobile">
+                <div class="thirdmainsecond">
+                    <img class="thirdmainsecondImg" src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/boxshot.png"href="stylesheet">
+                    <div class="thirdmainsecondPara">Stranger Things</div>
+                    <div class="thirdmainsecondIcon"><i class="fa-solid fa-download"></i></div>
+                </div>
+            </div>
+            
+        </div>      
+        <div class="thirdseconddiv">
+            <h2 class="h22">
+                <b>Download your shows <br>to watch offline.</b>
+            </h2>
+            <p class="p22"><b>Save your favourites easily and always have<br>something to watch.</b>
+            </p>
+        </div>
+    </div>
+<br>
+
+    <div class="fourmain">
+        <div class="mainfour">
+            <h2 class="h22"><b>Watch Everywhere</b></h2>
+            <p class="p22"><b>Stream unlimited movies and TV shows on your<br>phone, tablet, laptop, and TV.</b></p>
+        </div>
+        <div class="hloo">
+            <div><img class="hlooImg" style=" height:400px;width:500px;" src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/device-pile-in.png"> 
+            </div>
+        </div>
+    </div>
+<br>
+    <div class="fivemain">
+        <img class="fiveimg" src="https://occ-0-6247-2186.1.nflxso.net/dnm/api/v6/19OhWN2dO19C9txTON9tvTFtefw/AAAABVr8nYuAg0xDpXDv0VI9HUoH7r2aGp4TKRCsKNQrMwxzTtr-NlwOHeS8bCI2oeZddmu3nMYr3j9MjYhHyjBASb1FaOGYZNYvPBCL.png?r=54d">
+        <div class="fivediv">
+            <h2 class="h22"><b>Create profiles for <br>kids</b></h2>
+            <p class="p22"><b>Send children on adventures with their <br>favourite characters in a space made just for <br>them—free with your membership.</b></p>
+        </div>
+    </div>
+
+    <div class="sixmain">
+        <h2 class="sixh2"><b>Frequently Asked Question</b></h2>
+        <button class="sixbutton" id="z1z1">What is Netflix?<i class="fa-solid fa-plus"></i></button><br>
+        <div class="t1t1" id="t1t1"></div>
+        <button class="sixbutton" id="z1z2">How much does Netflix cost? <i class="fa-solid fa-plus"></i></button><br>
+        <button class="sixbutton" id="z1z2">Where can I watch?<i class="fa-solid fa-plus"></i></button><br>
+        <button class="sixbutton" id="z1z2">How do I cancel?<i class="fa-solid fa-plus"></i></button><br>
+        <button class="sixbutton" id="z1z2">What can I watch on Netflix?<i class="fa-solid fa-plus"></i></button><br>
+        <button class="sixbutton" id="z1z2">Is Netflix good for kids?<i class="fa-solid fa-plus"></i></button>
+
+
+        <h3>Ready to watch? Enter your email to create or restart your membership.</h3>
+        <form action="../after-sign-in/1st-step/index.html">
+            <input class="sixinput" placeholder="  Email address" required>
+            <button class="getstarted">Get Started ></button>
+        </form>
+    </div>
+
+
+
+<br>
+    <div class="last">
+        <p class="lastp1">Questions? call<a>000-800-919-1694</a></p>
+        <div class="allul">
+            <div>
+                <ul>
+                    <li><a>FAQ</a></li>
+                    <li><a>Media center</a></li>
+                    <li><a>Ways to watch</a></li>
+                    <li><a>Cookies preferences</a></li>
+                    <li><a>Speed Test</a></li>
+                </ul>
+            </div>
+            <div>
+                <ul>
+                    <li>Speed center</li>
+                    <li>Investor Relations</li>
+                    <li>Terms of Use</li>
+                    <li>Terms of Use</li>
+                    <li>Legal Notices</li>
+                </ul>
+            </div>
+            <div>
+                <ul>
+                    <li>Account</li>
+                    <li>Jobs</li>
+                    <li>Privicy</li>
+                    <li>Contact Us</li>
+                    <li>Only on Netflix</li>
+                </ul>
+            <div>
+
+            </div>
+            </div>
+        </div>
+
+
+        <div class="inputlast">
+            <select name="language" id="language">
+                <option value="English">English </option>
+                <option value="Hindi">Hindi</option>
+            </select>
+        </div>
+        <p class="lastp2">Netflix india</p>  
+    </div>
+    <script src="app.js"></script>
 </body>
 </html>
