--- a/Netflix sign in/index.html
+++ b/Netflix sign in/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="header">
             <div class="headerimg">
-                <a href="../Netflix/index.html"><img style="height:45px; width:150px;" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/08/Netflix_2015_logo.svg/2560px-Netflix_2015_logo.svg.png"></a>
+                <a href="../index.html"><img style="height:45px; width:150px;" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/08/Netflix_2015_logo.svg/2560px-Netflix_2015_logo.svg.png"></a>
             </div>
         </div>  
         <div class="middle">
