--- a/after-sign-in/1st-step/index.html
+++ b/after-sign-in/1st-step/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="header">
-        <a href="C:\Users\admin\OneDrive\Desktop\classroom aryan\HOME_NETFLIX\Netflix/index.html"><img class="firstImg" style="height:45px; width:150px;" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/08/Netflix_2015_logo.svg/2560px-Netflix_2015_logo.svg.png"></a>
+        <a href="C:\Users\admin\OneDrive\Desktop\classroom aryan\HOME_NETFLIX/index.html"><img class="firstImg" style="height:45px; width:150px;" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/08/Netflix_2015_logo.svg/2560px-Netflix_2015_logo.svg.png"></a>
         <a class="firstAnchor" href="C:\Users\admin\OneDrive\Desktop\classroom aryan\HOME_NETFLIX\Netflix sign in/index.html">Sign in</a>
     </div>
     <hr>
