--- a/I NOT LEARN MY No/index.html
+++ b/I NOT LEARN MY No/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="header">
             <div class="img">
-                <a href="../Netflix/index.html"><img style="height:45px; width:150px;" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/08/Netflix_2015_logo.svg/2560px-Netflix_2015_logo.svg.png"></a>
+                <a href="../index.html"><img style="height:45px; width:150px;" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/08/Netflix_2015_logo.svg/2560px-Netflix_2015_logo.svg.png"></a>
             </div>
             <a class="aaa" href="file:///C:/Users/admin/OneDrive/Desktop/classroom%20aryan/HOME%20NETFLIX/Netflix%20sign%20in/index.html"><b>Sign In</b></a>
         </div>
