--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
                 </select>
             </div>
             <div class="btn">
-                <button><b><a style="color:white; text-decoration: none;" href="../Netflix sign in/index.html">Sign in</a></b></button>
+                <button><b><a style="color:white; text-decoration: none;" href="../HOME_NETFLIX/Netflix sign in/index.html">Sign in</a></b></button>
             </div>
         </div>
 
         <h1 class="h1"><b>Unlimited movies,TV shows and more</b></h1>
         <p class="p1">Watch anywhere,Cancel anywhere</p>
         <h3 class="h3">Ready to watch? Enter your email to create or restart your membership.</h3>
-        <form action="../after-sign-in/1st-step/index.html">
+        <form action="../HOME_NETFLIX/after-sign-in/1st-step/index.html">
             <input class="aryan" type="mail" placeholder="  Email address" required>
-            <button class="getstarted" href="../after-sign-in/1st-step/index.html">Get Started ></button>
+            <button class="getstarted" href="../HOME_NETFLIX/after-sign-in/1st-step/index.html">Get Started ></button>
         </form>
     </div>
 <br>
@@ -96,7 +96,7 @@
 
 
         <h3>Ready to watch? Enter your email to create or restart your membership.</h3>
-        <form action="../after-sign-in/1st-step/index.html">
+        <form action="../HOME_NETFLIX/after-sign-in/1st-step/index.html">
             <input class="sixinput" placeholder="  Email address" required>
             <button class="getstarted">Get Started ></button>
         </form>
