--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </select>
             </div>
             <div class="btn">
-                <button><b><a style="color:white; text-decoration: none;" href="../HOME_NETFLIX/Netflix sign in/index.html">Sign in</a></b></button>
+                <button><b><a style="color:white; text-decoration: none;" href="C:\Users\admin\OneDrive\Desktop\classroom aryan\HOME_NETFLIX\Netflix sign in/index.html">Sign in</a></b></button>
             </div>
         </div>
 
